feat: Validate Request at API Gateway

--- a/serverless.yml
+++ b/serverless.yml
@@ -1,14 +1,10 @@
 service:
     name: serverless-udagram-app
 
-custom:
-    webpack:
-        webpackConfig: ./webpack.config.js
-        includeModules: true
-
-# Add the serverless-webpack plugin
 plugins:
     - serverless-webpack
+    - serverless-reqvalidator-plugin
+    - serverless-aws-documentation
 
 provider:
     name: aws
@@ -26,6 +22,21 @@ provider:
               - dynamodb:PutItem
           Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.GROUPS_TABLE}
 
+custom:
+    webpack:
+        webpackConfig: ./webpack.config.js
+        includeModules: true
+    documentation:
+        api:
+            info:
+                version: v1.0.0
+                title: Udagram API
+                description: Serverless application for images sharing
+        models:
+            - name: GroupRequest
+              contentType: application/json
+              schema: ${file(models/create-group-request.json)}
+
 functions:
     GetGroups:
         handler: src/lambda/http/getGroups.handler
@@ -41,6 +52,12 @@ functions:
                   method: post
                   path: groups
                   cors: true
+                  reqValidatorName: RequestBodyValidator
+                  documentation:
+                      summary: Create a new group
+                      description: Create a new group
+                      requestModels:
+                          "application/json": GroupRequest
 
 resources:
     Resources:
@@ -55,3 +72,11 @@ resources:
                       KeyType: HASH
                 BillingMode: PAY_PER_REQUEST
                 TableName: ${self:provider.environment.GROUPS_TABLE}
+        RequestBodyValidator:
+            Type: AWS::ApiGateway::RequestValidator
+            Properties:
+                Name: "request-body-validator"
+                RestApiId:
+                    Ref: ApiGatewayRestApi
+                ValidateRequestBody: true
+                ValidateRequestParameters: false
