--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/node": "^10.12.18",
     "aws-sdk": "^2.846.0",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
+    "serverless-aws-documentation": "^1.1.0",
+    "serverless-reqvalidator-plugin": "^1.0.3",
     "serverless-webpack": "^5.2.0",
     "ts-loader": "^5.3.3",
     "typescript": "^3.2.4",
