--- a/serverless.yml
+++ b/serverless.yml
@@ -13,14 +13,22 @@ provider:
         minimumCompressionSize: 1024 # Enable gzip compression for responses > 1 KB
     stage: ${opt:stage, 'dev'}
     region: ${opt:region, 'us-east-1'}
+
     environment:
         GROUPS_TABLE: Groups-${self:provider.stage}
+        IMAGES_TABLE: Images-${self:provider.stage}
+
     iamRoleStatements:
         - Effect: Allow
           Action:
               - dynamodb:Scan
               - dynamodb:PutItem
+              - dynamodb:GetItem
           Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.GROUPS_TABLE}
+        - Effect: Allow
+          Action:
+              - dynamodb:Query
+          Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.IMAGES_TABLE}
 
 custom:
     webpack:
@@ -58,6 +66,13 @@ functions:
                       description: Create a new group
                       requestModels:
                           "application/json": GroupRequest
+    GetImages:
+        handler: src/lambda/http/getImages.handler
+        events:
+            - http:
+                  method: get
+                  path: groups/{groupId}/images
+                  cors: true
 
 resources:
     Resources:
@@ -72,6 +87,21 @@ resources:
                       KeyType: HASH
                 BillingMode: PAY_PER_REQUEST
                 TableName: ${self:provider.environment.GROUPS_TABLE}
+        ImagesDynamoDBTable:
+            Type: AWS::DynamoDB::Table
+            Properties:
+                AttributeDefinitions:
+                    - AttributeName: groupId
+                      AttributeType: S
+                    - AttributeName: timestamp
+                      AttributeType: S
+                KeySchema:
+                    - AttributeName: groupId
+                      KeyType: HASH
+                    - AttributeName: timestamp
+                      KeyType: RANGE
+                BillingMode: PAY_PER_REQUEST
+                TableName: ${self:provider.environment.IMAGES_TABLE}
         RequestBodyValidator:
             Type: AWS::ApiGateway::RequestValidator
             Properties:
