feat: Implement Create Image API with validation

--- a/serverless.yml
+++ b/serverless.yml
@@ -29,6 +29,7 @@ provider:
         - Effect: Allow
           Action:
               - dynamodb:Query
+              - dynamodb:PutItem
           Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.IMAGES_TABLE}
         - Effect: Allow
           Action:
@@ -49,6 +50,9 @@ custom:
             - name: GroupRequest
               contentType: application/json
               schema: ${file(models/create-group-request.json)}
+            - name: ImageRequest
+              contentType: application/json
+              schema: ${file(models/create-image-request.json)}
 
 functions:
     GetGroups:
@@ -86,6 +90,20 @@ functions:
                   method: get
                   path: images/{imageId}
                   cors: true
+
+    CreateImage:
+        handler: src/lambda/http/createImage.handler
+        events:
+            - http:
+                  method: post
+                  path: groups/{groupId}/images
+                  cors: true
+                  reqValidatorName: RequestBodyValidator
+                  documentation:
+                      summary: Create a new Image in Group ID
+                      description: Create a new Image in Group ID
+                      requestModels:
+                          "application/json": ImageRequest
 
 resources:
     Resources:
