feat: Create S3 Bucket Resource

--- a/serverless.yml
+++ b/serverless.yml
@@ -18,6 +18,7 @@ provider:
         GROUPS_TABLE: Groups-${self:provider.stage}
         IMAGES_TABLE: Images-${self:provider.stage}
         IMAGE_ID_INDEX: ImageIdIndex
+        IMAGES_S3_BUCKET: serverless-udagram-suteri-images-${self:provider.stage}
 
     iamRoleStatements:
         - Effect: Allow
@@ -150,3 +151,33 @@ resources:
                     Ref: ApiGatewayRestApi # API Gateway build using serverless
                 ValidateRequestBody: true
                 ValidateRequestParameters: false
+        AttachmentsBucket:
+            Type: AWS::S3::Bucket
+            Properties:
+                BucketName: ${self:provider.environment.IMAGES_S3_BUCKET}
+                CorsConfiguration:
+                    CorsRules:
+                        - AllowedOrigins:
+                              - "*"
+                          AllowedHeaders:
+                              - "*"
+                          AllowedMethods:
+                              - GET
+                              - PUT
+                              - POST
+                              - DELETE
+                              - HEAD
+                          MaxAge: 3000
+        BucketPolicy:
+            Type: AWS::S3::BucketPolicy
+            Properties:
+                PolicyDocument:
+                    Id: MyPolicy
+                    Version: "2012-10-17"
+                    Statement:
+                        - Sid: PubicReadForGetBucketObjects
+                          Effect: Allow
+                          Principal: "*" # Allow all to access
+                          Action: "s3:GetObject"
+                          Resource: "arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*"
+                Bucket: !Ref AttachmentsBucket
