feat: Get Signed URL for uploaded image

--- a/serverless.yml
+++ b/serverless.yml
@@ -19,6 +19,7 @@ provider:
         IMAGES_TABLE: Images-${self:provider.stage}
         IMAGE_ID_INDEX: ImageIdIndex
         IMAGES_S3_BUCKET: serverless-udagram-suteri-images-${self:provider.stage}
+        SIGNED_URL_EXPIRATION: 300
 
     iamRoleStatements:
         - Effect: Allow
