--- a/serverless.yml
+++ b/serverless.yml
@@ -37,7 +37,11 @@ provider:
           Action:
               - dynamodb:Query
           Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.IMAGES_TABLE}/index/${self:provider.environment.IMAGE_ID_INDEX}
-
+        - Effect: Allow
+          Action:
+              - s3:PutObject
+              - s3:GetObject
+          Resource: arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*
 custom:
     webpack:
         webpackConfig: ./webpack.config.js
