--- a/serverless.yml
+++ b/serverless.yml
@@ -110,6 +110,8 @@ functions:
                       description: Create a new Image in Group ID
                       requestModels:
                           "application/json": ImageRequest
+    SendUploadNotifications:
+        handler: src/lambda/s3/sendNotifications.handler
 
 resources:
     Resources:
@@ -160,6 +162,10 @@ resources:
             Type: AWS::S3::Bucket
             Properties:
                 BucketName: ${self:provider.environment.IMAGES_S3_BUCKET}
+                NotificationConfiguration:
+                    LambdaConfigurations:
+                        - Event: s3:ObjectCreated:*
+                          Function: !GetAtt SendUploadNotificationsLambdaFunction.Arn
                 CorsConfiguration:
                     CorsRules:
                         - AllowedOrigins:
@@ -173,6 +179,16 @@ resources:
                               - DELETE
                               - HEAD
                           MaxAge: 3000
+
+        SendUploadNotificationsPermission:
+            Type: AWS::Lambda::Permission
+            Properties:
+                FunctionName: !Ref SendUploadNotificationsLambdaFunction
+                Principal: s3.amazonaws.com
+                Action: lambda:InvokeFunction
+                SourceAccount: !Ref AWS::AccountId
+                SourceArn: arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}
+
         BucketPolicy:
             Type: AWS::S3::BucketPolicy
             Properties:
