feat: Add Web Socket Connect and Disconnect Handlers

--- a/serverless.yml
+++ b/serverless.yml
@@ -17,6 +17,7 @@ provider:
     environment:
         GROUPS_TABLE: Groups-${self:provider.stage}
         IMAGES_TABLE: Images-${self:provider.stage}
+        CONNECTIONS_TABLE: Connections-${self:provider.stage}
         IMAGE_ID_INDEX: ImageIdIndex
         IMAGES_S3_BUCKET: serverless-udagram-suteri-images-${self:provider.stage}
         SIGNED_URL_EXPIRATION: 300
@@ -42,6 +43,13 @@ provider:
               - s3:PutObject
               - s3:GetObject
           Resource: arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*
+        - Effect: Allow
+          Action:
+              - dynamodb:Scan
+              - dynamodb:PutItem
+              - dynamodb:GetItem
+              - dynamodb:DeleteItem
+          Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.CONNECTIONS_TABLE}
 custom:
     webpack:
         webpackConfig: ./webpack.config.js
@@ -111,6 +119,18 @@ functions:
                       requestModels:
                           "application/json": ImageRequest
 
+    ConnectHandler:
+        handler: src/lambda/websocket/connect.handler
+        events:
+            - websocket:
+                  route: $connect
+
+    DisconnectHandler:
+        handler: src/lambda/websocket/disconnect.handler
+        events:
+            - websocket:
+                  route: $disconnect
+
 resources:
     Resources:
         GroupsDynamoDBTable:
@@ -124,6 +144,19 @@ resources:
                       KeyType: HASH # HASH -> PRIMARY KEY
                 BillingMode: PAY_PER_REQUEST
                 TableName: ${self:provider.environment.GROUPS_TABLE}
+
+        WebSocketConnectionsDynamoDBTable:
+            Type: AWS::DynamoDB::Table
+            Properties:
+                AttributeDefinitions:
+                    - AttributeName: id
+                      AttributeType: S
+                KeySchema:
+                    - AttributeName: id
+                      KeyType: HASH
+                BillingMode: PAY_PER_REQUEST
+                TableName: ${self:provider.environment.CONNECTIONS_TABLE}
+
         ImagesDynamoDBTable:
             Type: AWS::DynamoDB::Table
             Properties:
