--- a/serverless.yml
+++ b/serverless.yml
@@ -14,7 +14,7 @@ provider:
     stage: ${opt:stage, 'dev'}
     region: ${opt:region, 'us-east-1'}
 
-    environment:
+    environment: # global environment variables - accessible to all lambda functions
         GROUPS_TABLE: Groups-${self:provider.stage}
         IMAGES_TABLE: Images-${self:provider.stage}
         CONNECTIONS_TABLE: Connections-${self:provider.stage}
@@ -119,6 +119,10 @@ functions:
                       requestModels:
                           "application/json": ImageRequest
     SendUploadNotifications:
+        environment: # Environement vars which are local to this lambda function
+            STAGE: ${self:provider.stage}
+            API_ID:
+                Ref: WebsocketsApi
         handler: src/lambda/s3/sendNotifications.handler
 
     ConnectHandler:
