--- a/serverless.yml
+++ b/serverless.yml
@@ -136,6 +136,12 @@ functions:
         events:
             - websocket:
                   route: $disconnect
+    SyncWithElasticsearch:
+        handler: src/lambda/dynamodb/elasticSearchSync.handler
+        events:
+            - stream:
+                  type: dynamodb
+                  arn: !GetAtt ImagesDynamoDBTable.StreamArn
 
 resources:
     Resources:
@@ -186,6 +192,8 @@ resources:
                       Projection:
                           ProjectionType: ALL # What attributes to copyto global seconday index
                 BillingMode: PAY_PER_REQUEST
+                StreamSpecification:
+                    StreamViewType: NEW_IMAGE
                 TableName: ${self:provider.environment.IMAGES_TABLE}
         RequestBodyValidator:
             Type: AWS::ApiGateway::RequestValidator
