feat: Create an ElasticSearch Cluster

--- a/serverless.yml
+++ b/serverless.yml
@@ -247,3 +247,26 @@ resources:
                           Action: "s3:GetObject"
                           Resource: "arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*"
                 Bucket: !Ref AttachmentsBucket
+        ImagesSearch:
+            Type: AWS::Elasticsearch::Domain
+            Properties:
+                ElasticsearchVersion: "6.3"
+                DomainName: images-search-${self:provider.stage}
+                ElasticsearchClusterConfig:
+                    DedicatedMasterEnabled: false
+                    InstanceCount: "1"
+                    ZoneAwarenessEnabled: false
+                    InstanceType: t2.small.elasticsearch
+                EBSOptions:
+                    EBSEnabled: true
+                    Iops: 0
+                    VolumeSize: 10
+                    VolumeType: "gp2"
+                AccessPolicies:
+                    Version: "2012-10-17"
+                    Statement:
+                        - Effect: Allow
+                          Principal:
+                              AWS: "arn:aws:iam::688282928763:user/serverless"
+                          Action: "es:ESHttp*"
+                          Resource: "arn:aws:es:${self:provider.region}:688282928763:domain/images-search-${self:provider.stage}/*"
