--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   },
   "dependencies": {
     "@types/uuid": "^8.3.0",
+    "elasticsearch": "^16.7.2",
+    "http-aws-es": "^6.0.0",
     "source-map-support": "^0.5.10",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
+    "@types/elasticsearch": "^5.0.37",
     "@types/node": "^10.12.18",
     "aws-sdk": "^2.846.0",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
