feat: Create Mock Authorization for CREATE REST APIs

--- a/serverless.yml
+++ b/serverless.yml
@@ -75,6 +75,8 @@ custom:
               schema: ${file(models/create-image-request.json)}
 
 functions:
+    Auth:
+        handler: src/lambda/auth/auth0Authorizer.handler
     GetGroups:
         handler: src/lambda/http/getGroups.handler
         events:
@@ -89,6 +91,7 @@ functions:
                   method: post
                   path: groups
                   cors: true
+                  authorizer: Auth
                   reqValidatorName: RequestBodyValidator
                   documentation:
                       summary: Create a new group
@@ -118,6 +121,7 @@ functions:
                   method: post
                   path: groups/{groupId}/images
                   cors: true
+                  authorizer: Auth
                   reqValidatorName: RequestBodyValidator
                   documentation:
                       summary: Create a new Image in Group ID
@@ -176,6 +180,17 @@ functions:
 
 resources:
     Resources:
+        GatewayResponseDefault4XX:
+            Type: AWS::ApiGateway::GatewayResponse
+            Properties:
+                ResponseParameters:
+                    gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
+                    gatewayresponse.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
+                    gatewayresponse.header.Access-Control-Allow-Methods: "'GET,OPTIONS,POST'"
+                ResponseType: DEFAULT_4XX
+                RestApiId:
+                    Ref: ApiGatewayRestApi
+
         GroupsDynamoDBTable:
             Type: AWS::DynamoDB::Table
             Properties:
