feat: Integrate Auth0 Service for Authentication
Auth0 Service Integration is complete. Auth0 Secret needs to be modified (currently using a placeholder).
Instead of storing secret in Evironment Variable, Need to use more secure way.

--- a/serverless.yml
+++ b/serverless.yml
@@ -22,6 +22,7 @@ provider:
         IMAGES_S3_BUCKET: serverless-udagram-suteri-images-${self:provider.stage}
         SIGNED_URL_EXPIRATION: 300
         THUMBNAILS_S3_BUCKET: serverless-udagram-suteri-thumbnail-${self:provider.stage}
+        AUTH_0_SECRET: not-a-good-way-to-store-secret # TODO: Change this to more secure way
 
     iamRoleStatements:
         - Effect: Allow
