--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "elasticsearch": "^16.7.2",
     "http-aws-es": "^6.0.0",
     "jimp": "^0.16.1",
+    "jsonwebtoken": "^8.5.1",
     "source-map-support": "^0.5.10",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
     "@types/elasticsearch": "^5.0.37",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^10.12.18",
     "aws-sdk": "^2.846.0",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
