--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "http-aws-es": "^6.0.0",
     "jimp": "^0.16.1",
     "jsonwebtoken": "^8.5.1",
+    "middy": "^0.36.0",
     "source-map-support": "^0.5.10",
     "uuid": "^8.3.2"
   },
