feat: Use Assymmetric Signing instead of Symmetric

--- a/serverless.yml
+++ b/serverless.yml
@@ -85,6 +85,8 @@ custom:
               schema: ${file(models/create-image-request.json)}
 
 functions:
+    RS256Auth:
+        handler: src/lambda/auth/rs256Auth0Authorizer.handler
     Auth:
         handler: src/lambda/auth/auth0Authorizer.handler
     GetGroups:
@@ -101,7 +103,7 @@ functions:
                   method: post
                   path: groups
                   cors: true
-                  authorizer: Auth
+                  authorizer: RS256Auth
                   reqValidatorName: RequestBodyValidator
                   documentation:
                       summary: Create a new group
@@ -131,7 +133,7 @@ functions:
                   method: post
                   path: groups/{groupId}/images
                   cors: true
-                  authorizer: Auth
+                  authorizer: RS256Auth
                   reqValidatorName: RequestBodyValidator
                   documentation:
                       summary: Create a new Image in Group ID
